##################################################
 Revision history for Log::Log4perl
##################################################

1.14 (2007/11/18)
    *   (ms) Fixed test suite bug which surfaced in Darwin because temporary
             files contain '++' which freaked out the sloppy regex match.
    *   (ms) Better handling of empty config files (reported by Robert Raisch)
    *   (ms) Rewrote the Synchronized appender to use semaphores exclusivly
             (got rid of IPC::Shareable).
    *   (ms) Added Log::Log4perl::Util::Semaphore for easy semop handling
    *   (ms) Fixed t/026FileApp.t to work on MSWin32.

1.13 (2007/10/11)
    *   (ms) Another doc fix by Craig
    *   (ms) Applied Fedora 7 patches
    *   (ms) Added create_at_logtime option to file appender
    *   (ms) Added trace level color (yellow) in ScreenColoredLevels
             appender as suggested by Arvind Jayaprakash in
             https://sourceforge.net/tracker/index.php?
                 func=detail&aid=1791445&group_id=56939&atid=482388

1.12 (2007/06/23)
    *   (ms) Added Log::Log4perl::Resurrector to resurrect commented-out
             Log4perl statements in all subsequently loaded modules (allows
             for deploying L4p-enabled CPAN modules without requiring L4p).
    *   (ms) Added ALWAYS easy mode macro (level=OFF)
    *   (ms) Fixed logconfess() frame level bug reported by Ali Mesdaq.
             Added test case.

1.11 (2007/05/29)
    *   (ms) Added PatternLayout::Multiline code by Cory Bennett to 
             render multiline messages.
    *   (ms) Added log level TRACE (lets through even more messages
             than DEBUG) (suggested by Craig).
    *   (ms) Added 'syswrite' flag to file appender to have it use
             'syswrite' instead of 'print', avoiding buffered or
             interleaving messages originating from different processes
             (thanks to Evan Miller).

1.10 (2007/03/27)